hot fix. overlap tab active not on paper.

--- a/Assets/scss/components/navigation/_tabs-overlap.scss
+++ b/Assets/scss/components/navigation/_tabs-overlap.scss
@@ -40,7 +40,7 @@
 			margin-bottom: -1px;
 			padding-bottom: 3px;
 			@if $brand-level < 2{
-			background: grey(25);
+			background: #fff;	
 			border-color: grey(50);
 			}
 			@if $brand-level >= 2{
